[package]
name = "sa_decontamination"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3
overflow-checks = false  # Go FAAASSTTT!

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.1.11", features = ["derive"] }
rayon = "1.10.0"
aws-config = "1.1.8"
aws-sdk-s3 = "1.19.1"
async-compression = {version ="0.4.6", features=["all"]}
tokio = { version = "1.36.0", features = ["full"] }
rng = "0.1.0"
rand = "0.8.5"
glob = "0.3.1"
zstd = "0.13.1"
flate2 = "1.0.30"
crossbeam = "0.3"
filebuffer = "0.4"
bitvec = "1"
dashmap = "5.5.3"
serde_json = "1.0.117"
indicatif = "0.17.8"
bincode = "1.3.3"
